--- a/style.css
+++ b/style.css
@@ -127,17 +127,25 @@ nav ul li {
   display: flex;
   justify-content: center;
 }
-.review{
+.review {
   font-size: 15px;
   font-weight: 20px;
   font-family: Quicksand;
 }
 
-.Loved{
+.Loved {
   color: #252432;
   font-family: Quicksand;
 }
-.Mifti{
+.Mifti {
   color: #252432;
   font-family: Quicksand;
+  margin-left: 10px;
+  gap: 12px;
+}
+
+.class-bana {
+  border: 1px solid #F0E4D3;
+  border-radius: 8px;
+  padding: 24px;
 }
