--- a/style.css
+++ b/style.css
@@ -143,17 +143,14 @@ nav ul li {
   margin-left: 10px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start; 
-  margin-top: 0%; 
+  justify-content: flex-start;
+  margin-top: 0%;
 }
 
 .class-bana {
-  border: 1px solid #F0E4D3;
+  border: 1px solid #f0e4d3;
   border-radius: 8px;
   padding: 24px;
   margin-left: 20px;
   margin-right: 28px;
-
 }
-
-
